<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/background_header" />

    <EditText
        android:id="@+id/background_input_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:hint="@string/background_edittext_hint"
        android:lines="8"
        android:scrollbars="vertical"
        android:gravity="top|start"
        android:background="@color/beige_middle"
        android:layout_margin="20dp"
        android:padding="7dp"
        android:layout_weight="7.5"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:gravity="top|center">

        <Button
            android:id="@+id/bg_back_page_btn"
            android:text="@string/back"
            android:layout_marginEnd="30dp"
            style="@style/RaceClassNextBackBtn"
            android:background="@drawable/expandable_button_background"/>

        <Button
            android:id="@+id/bg_next_page_btn"
            android:text="@string/next"
            style="@style/RaceClassNextBackBtn"
            android:background="@drawable/expandable_button_background"/>
    </LinearLayout>
</LinearLayout>