<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85">

        <ImageButton
            android:id="@+id/race_class_back_btn"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:src="@drawable/arrowprevious"
            style="@style/class_race_image_btn"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:scaleX="0.85"
                android:scaleY="0.80"
                android:layout_weight="0.4"
                android:gravity="center"
                android:background="@drawable/barbarian"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-55dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="Warrior"/>

            <Button
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-10dp"
                style="@style/class_race_details"
                android:text="@string/details"
                android:background="@drawable/expandable_button_background" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/race_class_next_btn"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/arrownext"
            style="@style/class_race_image_btn"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="top|center">

        <Button
            android:text="@string/back"
            android:layout_marginRight="30dp"
            style="@style/class_race_next_back_btn"
            android:background="@drawable/expandable_button_background"/>

        <Button
            android:text="@string/next"
            style="@style/class_race_next_back_btn"
            android:background="@drawable/expandable_button_background"/>
    </LinearLayout>

</LinearLayout>